refactor(intelli-ai-changelog-main): 重构 CommitMessageGenerator 类结构并优化代码可读性